test/expected/declare_udc_a4i.out
typedef int A4[4]; declare user-defined conversion operator returning A4
                                                    ^
53: error: user-defined conversion operator can not convert to an array; did you mean pointer to array?
